--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -492,72 +492,123 @@
     "\n",
     "The discussion also mentions **alternative tools** available in LangChain, such as **Wolfram Alpha (math and logic), Google/Bing search, Tavily Search API (optimized for LLMs), and Open-Meteo (weather data)**.\n",
     "\n",
-    "Finally, the text suggests **deploying the agent as a Streamlit app** to create an interactive web interface, leveraging Streamlit’s simplicity and ML workflow optimization."
+    "Finally, the text suggests **deploying the agent as a Streamlit app** to create an interactive web interface, leveraging Streamlit’s simplicity and ML workflow optimization.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "**Overall Purpose**\n",
+    "\n",
+    "The following code constructs an interactive chatbot application using the Streamlit library. The chatbot leverages the power of a large language model (LLM) combined with external tools like arXiv and Wikipedia to provide comprehensive and informative responses to user queries. The underlying framework for the chatbot's reasoning and action selection is the ReAct (Reasoning and Acting) framework.\n",
+    "\n",
+    "**Code Breakdown**\n",
+    "\n",
+    "1. **Initialization and Setup**\n",
+    "\n",
+    "   ```python\n",
+    "   from config import set_environment  # Import a custom function (presumably for setting API keys and environment variables)\n",
+    "\n",
+    "   set_environment()  # Call the function to configure the environment\n",
+    "\n",
+    "   import streamlit as st  # Import the Streamlit library for building the web application\n",
+    "\n",
+    "   from langchain_community.callbacks.streamlit import StreamlitCallbackHandler  # Import a callback handler for integrating with Streamlit\n",
+    "\n",
+    "   from langchain.prompts import PromptTemplate  # Import PromptTemplate for structuring prompts\n",
+    "   from langchain.agents import AgentExecutor, load_tools, create_react_agent  # Import components for creating and managing agents\n",
+    "   from langchain_community.chat_models import ChatOpenAI  # Import the ChatOpenAI language model\n",
+    "   ```\n",
+    "\n",
+    "   - These lines import the necessary libraries and modules.\n",
+    "   - `set_environment()` is assumed to handle any required environment configuration, such as setting API keys for the language model and tools.\n",
+    "\n",
+    "2. **`load_agent()` Function**\n",
+    "\n",
+    "   ```python\n",
+    "   def load_agent() -> AgentExecutor:\n",
+    "       \"\"\"\n",
+    "       This function initializes and loads a ReAct agent with specified tools and prompt template.\n",
+    "\n",
+    "       Returns:\n",
+    "           AgentExecutor: An agent executor ready to handle user requests.\n",
+    "       \"\"\"\n",
+    "       llm = ChatOpenAI(temperature=0.2, streaming=True)  # Initialize the language model with a temperature of 0.2 and streaming enabled.\n",
+    "       tools = load_tools(tool_names=[\"arxiv\", \"wikipedia\"], llm=llm)  # Load the arXiv and Wikipedia tools for the agent to use.\n",
+    "\n",
+    "       # Define the prompt template for the agent, instructing it on the format for its responses.\n",
+    "       prompt = PromptTemplate(\n",
+    "           input_variables=[\"input\", \"tools\", \"tool_names\", \"agent_scratchpad\"],\n",
+    "           template=(\n",
+    "               \"You are an assistant with access to the following tools: {tool_names}\\n\\n\"\n",
+    "               \"{tools}\\n\\n\"\n",
+    "               \"Use the following format *EXACTLY*:\\n\"\n",
+    "               \"Question: the input question\\n\"\n",
+    "               \"Thought: consider what to do\\n\"\n",
+    "               \"Action: the action to take, should be one of {tool_names}\\n\"\n",
+    "               \"Action Input: the input to the action\\n\"\n",
+    "               \"Observation: the result of the action\\n... (this Thought/Action/Action Input/Observation can repeat N times)\\n\"\n",
+    "               \"Thought: I now know the final answer\\n\"\n",
+    "               \"Final Answer: the final answer to the original input question\\n\\n\"\n",
+    "               \"Question: {input}\\n\"\n",
+    "               \"{agent_scratchpad}\"\n",
+    "           ),\n",
+    "       )\n",
+    "\n",
+    "       # Create the ReAct agent and return an agent executor.\n",
+    "       agent = create_react_agent(llm=llm, tools=tools, prompt=prompt)\n",
+    "       return AgentExecutor(agent=agent, tools=tools)\n",
+    "   ```\n",
+    "\n",
+    "   - This function encapsulates the logic for creating and configuring the ReAct agent.\n",
+    "   - `llm = ChatOpenAI(temperature=0.2, streaming=True)`: Initializes the `ChatOpenAI` language model.\n",
+    "     - `temperature=0.2`: Controls the randomness of the model's output. A lower temperature makes the output more deterministic.\n",
+    "     - `streaming=True`: Enables streaming of the model's output, allowing for a more interactive user experience.\n",
+    "   - `tools = load_tools(tool_names=[\"arxiv\", \"wikipedia\"], llm=llm)`: Loads the arXiv and Wikipedia tools. These tools allow the agent to access and retrieve information from these sources.\n",
+    "   - `prompt = PromptTemplate(...)`: Defines a `PromptTemplate` that structures the instructions and format for the agent's responses. The template emphasizes a clear ReAct format, where the agent explicitly states its thought process, actions, and observations.\n",
+    "   - `agent = create_react_agent(llm=llm, tools=tools, prompt=prompt)`: Creates the ReAct agent using the provided language model, tools, and prompt template.\n",
+    "   - `return AgentExecutor(agent=agent, tools=tools)`: Returns an `AgentExecutor` that manages the execution of the agent and its interactions with the tools.\n",
+    "\n",
+    "3. **Streamlit Application Logic**\n",
+    "\n",
+    "   ```python\n",
+    "   chain = load_agent()  # Initialize the agent executor\n",
+    "\n",
+    "   # Get user input from the Streamlit chat interface\n",
+    "   if prompt := st.chat_input():\n",
+    "       st.chat_message(\"user\").write(prompt)  # Display the user's message\n",
+    "       with st.chat_message(\"assistant\"):  # Context for the assistant's response\n",
+    "           st_callback = StreamlitCallbackHandler(st.container())  # Set up a callback handler for Streamlit\n",
+    "           response = chain.invoke(\n",
+    "               {\"input\": prompt}, callbacks=[st_callback], handle_parsing_errors=True  # Invoke the agent with the user's prompt, callbacks, and error handling\n",
+    "           )\n",
+    "           print(f\"Response: {response}\")  # Print the complete response from the agent\n",
+    "           if \"agent_outcome\" in response and response[\"agent_outcome\"] is not None:  # Check if the response contains agent outcome information\n",
+    "               print(f\"Agent Outcome: {response['agent_outcome']}\")  # Print the agent outcome details\n",
+    "           st.write(response[\"output\"])  # Display the agent's output in the chat interface\n",
+    "   ```\n",
+    "\n",
+    "   - `chain = load_agent()`: Initializes the agent executor by calling the `load_agent()` function.\n",
+    "   - `if prompt := st.chat_input():`: Checks if the user has provided input in the Streamlit chat interface.\n",
+    "   - `st.chat_message(\"user\").write(prompt)`: If there is user input, display it in the chat as a user message.\n",
+    "   - `with st.chat_message(\"assistant\"):`: Sets the context for the assistant's response in the chat.\n",
+    "   - `st_callback = StreamlitCallbackHandler(st.container())`: Creates a `StreamlitCallbackHandler` to integrate the agent's intermediate steps (thoughts, actions, observations) with the Streamlit application, allowing for a more interactive display of the agent's reasoning process.\n",
+    "   - `response = chain.invoke(...)`: Invokes the agent (using the `AgentExecutor`) with the user's prompt and additional parameters:\n",
+    "     - `{\"input\": prompt}`: Provides the user's input as a dictionary with the key \"input.\"\n",
+    "     - `callbacks=[st_callback]`: Includes the Streamlit callback handler to display the agent's thinking process.\n",
+    "     - `handle_parsing_errors=True`: Enables error handling to allow the agent to recover from potential parsing errors during its response generation.\n",
+    "   - `print(f\"Response: {response}\")`: Prints the complete response dictionary for debugging and inspection.\n",
+    "   - `if \"agent_outcome\" in response and response[\"agent_outcome\"] is not None:`: Checks if the response dictionary contains information about the agent's outcome and prints it if available.\n",
+    "   - `st.write(response[\"output\"])`: Extracts the final answer or output generated by the agent and displays it in the Streamlit chat interface.\n",
+    "\n",
+    "**In Summary**\n",
+    "\n",
+    "This code sets up a Streamlit-based chatbot application that utilizes a ReAct agent powered by a large language model. The agent can access external tools like arXiv and Wikipedia to gather information and provide comprehensive responses. The use of a prompt template enforces a clear and structured response format, while the Streamlit callback handler provides insights into the agent's reasoning process. The application is designed to be interactive, allowing users to engage in a conversation with the agent and receive informative answers to their questions."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from config import set_environment\n",
-    "set_environment()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.agents import AgentExecutor, load_tools, create_react_agent\n",
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "\n",
-    "def load_agent() -> AgentExecutor:\n",
-    "    llm = ChatOpenAI(temperature=0, streaming=True)\n",
-    "    tools = load_tools(\n",
-    "        tool_names=[\"ddg-search\", \"arxiv\", \"wikipedia\"],\n",
-    "        llm=llm\n",
-    "    )\n",
-    "    \n",
-    "    # Define a valid ReAct-style prompt with required placeholders\n",
-    "    prompt = PromptTemplate(\n",
-    "        input_variables=[\"input\", \"tools\", \"tool_names\", \"agent_scratchpad\"],\n",
-    "        template=(\n",
-    "            \"You are an assistant with access to the following tools: {tool_names}\\n\\n\"\n",
-    "            \"{tools}\\n\\n\"\n",
-    "            \"Use the following format:\\n\"\n",
-    "            \"Question: the input question\\n\"\n",
-    "            \"Thought: consider what to do\\n\"\n",
-    "            \"Action: the action to take, should be one of {tool_names}\\n\"\n",
-    "            \"Action Input: the input to the action\\n\"\n",
-    "            \"Observation: the result of the action\\n... (this Thought/Action/Action Input/Observation can repeat N times)\\n\"\n",
-    "            \"Thought: I now know the final answer\\n\"\n",
-    "            \"Final Answer: the final answer to the original input question\\n\\n\"\n",
-    "            \"Question: {input}\\n\"\n",
-    "            \"{agent_scratchpad}\"\n",
-    "        )\n",
-    "    )\n",
-    "    \n",
-    "    agent = create_react_agent(llm=llm, tools=tools, prompt=prompt)\n",
-    "    \n",
-    "    return AgentExecutor(agent=agent, tools=tools)\n",
-    "\n",
-    "import streamlit as st\n",
-    "from langchain_community.callbacks.streamlit import (\n",
-    "    StreamlitCallbackHandler,\n",
-    ")\n",
-    "chain = load_agent()\n",
-    "st_callback = StreamlitCallbackHandler(st.container())\n",
-    "if prompt := st.chat_input():\n",
-    "    st.chat_message(\"user\").write(prompt)\n",
-    "    with st.chat_message(\"assistant\"):\n",
-    "        st_callback = StreamlitCallbackHandler(st.container())\n",
-    "        response = chain.run(prompt, callbacks=[st_callback])\n",
-    "        st.write(response)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
