--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -608,7 +608,46 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Exploring Agent Architectures\n",
+    "\n",
+    "LLMs excel at pattern recognition in data but struggle with the symbolic reasoning required for complex multi-step problems. Implementing more advanced reasoning strategies would make our research assistant far more capable. Hybrid systems that combine neural pattern completion with deliberate symbolic manipulation can master skills such as these:\n",
+    "\n",
+    "* Multi-step deductive reasoning to draw conclusions from a chain of facts\n",
+    "* Mathematical reasoning like solving equations through a series of transformations\n",
+    "* Planning tactics to break down a problem into an optimized sequence of actions\n",
+    "\n",
+    "By integrating tools together with explicit reasoning steps instead of pure pattern completion, our agent can tackle problems requiring abstraction and imagination, and can arrive at a complex understanding of the world, enabling them to hold more meaningful conversations about complex concepts.\n",
+    "\n",
+    "The tools are the available resources that the agent can use, such as search engines or databases. The LLMChain is responsible for generating text prompts and parsing the output to determine the next action. The agent class uses the output of the LLMChain to decide which action to take.\n",
+    "\n",
+    "While tool-augmented language models combine LLMs with external resources like search engines and databases to enhance reasoning capabilities, this can be further enhanced with agents. In LangChain, this consists of three parts:\n",
+    "\n",
+    "* Tools\n",
+    "* An LLMChain\n",
+    "* The agent itself\n",
+    "\n",
+    "There are two key agent architectures:\n",
+    "\n",
+    "* **Action agents:** reason iteratively based on observations after each action.\n",
+    "* **Plan-and-execute agents:** plan completely upfront before taking any action.\n",
+    "\n",
+    "In **observation-dependent reasoning**, the agent iteratively provides context and examples to an LLM to generate thoughts and actions. Observations from tools are incorporated to inform the next reasoning step. This approach is used in action agents. An alternative is **plan-and-execute agents** that separates planning from execution. These agents first create a complete plan and then gather evidence to execute it. The **Planner** LLM produces a list of plans (P). The agent gathers evidence (E) using tools. P and E are combined and fed to the Solver LLM to generate the final output. Smaller specialized models can be used for the Planner and Solver roles. The trade-off is that plan-and-execute requires more upfront planning.\n",
+    "\n",
+    "Observation-dependent reasoning involves making judgments, predictions, or choices based on the current state of knowledge or the evidence fetched through observation. In each iteration, the agent provides context and examples to the LLM. A user’s task is first combined with the context and examples and given to the LLM to initiate reasoning. The LLM generates a thought and an action and then waits for an observation from tools. The observation is added to the prompt to initiate the next call to the LLM. In LangChain, this is an action agent (also, Zero-Shot agent), which is the default setting when you create an agent.\n",
+    "\n",
+    "The Planner (an LLM), which can be fine-tuned for planning and tool usage, produces a list of plans (P) and calls a worker (in LangChain, the agent) to gather evidence (E) by using tools. P and E are combined with the task and then fed into the Solver (an LLM) for the final answer. We can write a pseudo algorithm like this:\n",
+    "\n",
+    "1.  Plan out all the steps (Planner).\n",
+    "2.  For each step, determine the proper tools to accomplish the step and execute.\n",
+    "3.  The Planner and the Solver can be distinct language models. This opens the possibility of using smaller, specialized models for Planner and Solver, and using fewer tokens for each of the calls.\n",
+    "\n",
+    "We’ll implement a basic plan-and-execute agent for our research app. The agent will first generate a plan using an LLM, then execute actions based on the plan. This provides a structured approach for problem-solving, though it might be less adaptable than observation-dependent reasoning in certain complex scenarios. We’ll keep the option of using the Zero-Shot ReAct agent (observation-dependent reasoning).\n",
+    "\n",
+    "Let’s implement plan-and-solve in our research app!\n",
+    "\n",
+    "First, let’s add a strategy variable to the load_agent() function. It can take two values, either `plan-and-solve` or `zero-shot-react`. For `zero-shot-react`, the logic stays the same. For `plan-and-solve`, we’ll define a planner and an executor, which we’ll use to create a `PlanAndExecute` agent executor:"
+   ]
   }
  ],
  "metadata": {
