done with building capable assistants

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -648,6 +648,362 @@
     "\n",
     "First, let’s add a strategy variable to the load_agent() function. It can take two values, either `plan-and-solve` or `zero-shot-react`. For `zero-shot-react`, the logic stays the same. For `plan-and-solve`, we’ll define a planner and an executor, which we’ll use to create a `PlanAndExecute` agent executor:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from langchain_community.document_loaders.pdf import PyPDFLoader\n",
+    "\n",
+    "\n",
+    "from langchain.output_parsers import PydanticOutputParser\n",
+    "from langchain.output_parsers.json import SimpleJsonOutputParser\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain.prompts import PromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdf_file_path = os.path.expanduser(\"./data/openresume-resume.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdf_loader = PyPDFLoader(pdf_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = pdf_loader.load_and_split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from extract1 import Resume\n",
+    "parser = PydanticOutputParser(pydantic_object=Resume)\n",
+    "prompt = PromptTemplate(\n",
+    "    template=\"Extract information from the provided document.\\n{format_instructions}\\n{document}\\n\",\n",
+    "    input_variables=[\"document\"],\n",
+    "    partial_variables={\"format_instructions\": parser.get_format_instructions()},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'first_name': 'John',\n",
+       " 'last_name': 'Doe',\n",
+       " 'linkedin_url': 'linkedin.com/in/john-doe',\n",
+       " 'email_address': 'hello@openresume.com',\n",
+       " 'nationality': None,\n",
+       " 'skill': 'Software engineer',\n",
+       " 'study': {'start_date': 'Sep 2019',\n",
+       "  'end_date': 'May 2023',\n",
+       "  'description': 'Won 1st place in 2022 Education Hackathon, 2nd place in 2023 Health Tech Competition; Teaching Assistant for Programming for the Web (2022 - 2023); Coursework: Object-Oriented Programming (A+), Programming for the Web (A+), Cloud Computing (A), Introduction to Machine Learning (A-), Algorithms Analysis (A-)',\n",
+       "  'degree': 'Bachelor of Science in Computer Science',\n",
+       "  'university': 'XYZ University',\n",
+       "  'country': None,\n",
+       "  'grade': '3.8 GPA'},\n",
+       " 'work_experience': {'start_date': 'May 2023',\n",
+       "  'end_date': 'Present',\n",
+       "  'description': 'Lead a cross-functional team of 5 engineers in developing a search bar, which enables thousands of daily active users to search content across the entire platform; Create stunning home page product demo animations that drives up sign up rate by 20%; Write clean code that is modular and easy to maintain while ensuring 100% test coverage',\n",
+       "  'company': 'ABC Company',\n",
+       "  'job_title': 'Software Engineer'},\n",
+       " 'hobby': None}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm = ChatOpenAI(model_name=\"gpt-4-turbo\")\n",
+    "chain = prompt | llm | SimpleJsonOutputParser()  # or parser\n",
+    "chain.invoke({\"document\": doc})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resume Parsing Results\n",
+    "\n",
+    "The initial resume parsing yielded partial results, extracting only one work experience. However, this serves as a foundation for further refinement. Additional features, such as personality or leadership assessment, can be integrated. This approach is adaptable to various LLMs like Gemini Pro, Claude 3, and Mistral.\n",
+    "\n",
+    "**Note:** LLM-based extraction is non-deterministic. For consistent results, especially when extracting entities and attributes, set the temperature to 0.0. For complex schemas, break down the extraction into multiple, smaller operations.\n",
+    "\n",
+    "## LangChain Output Parsers\n",
+    "\n",
+    "LangChain output parsers convert LLM outputs into structured formats, enabling structured data generation. They offer diverse parsers, many supporting streaming.\n",
+    "\n",
+    "**Key Features:**\n",
+    "\n",
+    "* **Format Support:** JSON, XML, CSV, Pydantic models, YAML, DataFrames, enums, datetime, structured outputs.\n",
+    "* **Streaming:** Some parsers support streaming.\n",
+    "* **Prompt Integration:** Some include format instructions in prompts, others use schema parameters.\n",
+    "* **Error Correction:** Certain parsers re-invoke the LLM for corrections.\n",
+    "* **Input Flexibility:** Accept strings or messages, with some requiring specific message formats.\n",
+    "* **Output Variety:** JSON objects, dictionaries, lists, Pydantic models, etc.\n",
+    "\n",
+    "**Note:** For general structured data, JSON and Pydantic parsers are reliable. OpenAI Tools/Functions parsers utilize OpenAI's function calling. Other parsers handle specific formats like XML, CSV, and DataFrames."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import re\n",
+    "from langchain_core.messages.ai import AIMessage\n",
+    "def extract_json(message: AIMessage) -> list[dict]:\n",
+    "    \"\"\"Extract JSON content from a string where JSON is embedded between ```json and ``` tags.\"\"\"\n",
+    "    text = message.content\n",
+    "    pattern = r\"```json(.*?)```\"\n",
+    "    matches = re.findall(pattern, text, re.DOTALL)\n",
+    "    try:\n",
+    "        return [json.loads(match.strip()) for match in matches]\n",
+    "    except Exception:\n",
+    "        raise ValueError(f\"Failed to parse: {message}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Document': \"here's a text\"}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extract_json(AIMessage(content=\"\"\"Some ```json { \"Document\": \"here's a text\" } ```\"\"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'first_name': 'John',\n",
+       "  'last_name': 'Doe',\n",
+       "  'linkedin_url': 'linkedin.com/in/john-doe',\n",
+       "  'email_address': 'hello@openresume.com',\n",
+       "  'nationality': None,\n",
+       "  'skill': 'Software engineer',\n",
+       "  'study': {'start_date': 'Sep 2019',\n",
+       "   'end_date': 'May 2023',\n",
+       "   'description': 'Bachelor of Science in Computer Science - Won 1st place in 2022 Education Hackathon, 2nd place in 2023 Health Tech Competition. Teaching Assistant for Programming for the Web (2022 - 2023). Coursework includes Object-Oriented Programming (A+), Programming for the Web (A+), Cloud Computing (A), Introduction to Machine Learning (A-), Algorithms Analysis (A-).',\n",
+       "   'degree': 'Bachelor of Science in Computer Science',\n",
+       "   'university': 'XYZ University',\n",
+       "   'country': 'USA',\n",
+       "   'grade': '3.8 GPA'},\n",
+       "  'work_experience': {'start_date': 'May 2023',\n",
+       "   'end_date': 'Present',\n",
+       "   'description': 'Software Engineer at ABC Company - Lead a cross-functional team of 5 engineers in developing a search bar, created stunning home page product demo animations that increased sign up rate by 20%, and wrote clean code ensuring 100% test coverage.',\n",
+       "   'company': 'ABC Company',\n",
+       "   'job_title': 'Software Engineer'},\n",
+       "  'hobby': None}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm = ChatOpenAI(model_name=\"gpt-4-turbo\")\n",
+    "chain = prompt | llm | extract_json\n",
+    "chain.invoke({\"document\": doc})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Automatic Fact-Checking for LLM Hallucinations\n",
+    "\n",
+    "Automatic fact-checking mitigates LLM hallucinations by verifying claims against external sources. This process involves three stages:\n",
+    "\n",
+    "1.  **Claim Detection:** Identifying statements requiring verification.\n",
+    "2.  **Evidence Retrieval (Justification Production):** Finding sources that support or refute the claim.\n",
+    "3.  **Verdict Prediction:** Assessing the claim's veracity based on retrieved evidence.\n",
+    "\n",
+    "LangChain's `LLMCheckerChain` implements a self-checking mechanism through prompt chaining:\n",
+    "\n",
+    "1.  **Assumption Extraction:** The LLM identifies its assumptions using a template:\n",
+    "\n",
+    "    ```\n",
+    "    Here's a statement: {statement}\\nMake a bullet point list of the assumptions you made when producing the above statement.\\n\n",
+    "    ```\n",
+    "\n",
+    "2.  **Assertion Verification:** Each assumption is checked for truthfulness:\n",
+    "\n",
+    "    ```\n",
+    "    Here is a bullet point list of assertions:\n",
+    "        {assertions}\n",
+    "        For each assertion, determine whether it is true or false. If it is false, explain why.\\n\\n\n",
+    "    ```\n",
+    "\n",
+    "3.  **Final Judgment:** The LLM provides a final verdict based on the verification results:\n",
+    "\n",
+    "    ```\n",
+    "    In light of the above facts, how would you answer the question '{question}'\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMCheckerChain chain...\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'query': 'Who was the first president of Nigeria in 1999 after the colapse of the lase military junta?',\n",
+       " 'result': ' The first president of Nigeria in 1999 after the collapse of the last military junta was Olusegun Obasanjo, who was elected in the presidential election that year and served for two terms until 2007. '}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.chains import LLMCheckerChain\n",
+    "from langchain_openai import OpenAI\n",
+    "llm = OpenAI(temperature=0.7)\n",
+    "text = \"Who was the first president of Nigeria in 1999 after the colapse of the lase military junta?\"\n",
+    "checker_chain = LLMCheckerChain.from_llm(llm, verbose=True)\n",
+    "checker_chain.invoke(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mitigating Hallucinations with LLMCheckerChain\n",
+    "\n",
+    "While `LLMCheckerChain` doesn't ensure perfect accuracy, it effectively reduces incorrect LLM outputs by prompting the model to evaluate its own assumptions.\n",
+    "\n",
+    "**LLM Knowledge and Limitations:**\n",
+    "\n",
+    "LLMs possess substantial world knowledge from training data (e.g., Wikipedia). This allows them to answer factual questions directly.\n",
+    "\n",
+    "**Importance of Grounding:**\n",
+    "\n",
+    "Despite their capabilities, LLM responses must be grounded in verifiable evidence for trust. Combining LLMs with external fact-checking strengthens reliability. The core strategy is validating potentially hallucinated claims against factual data sources.\n",
+    "\n",
+    "\n",
+    "##   Chapter Summary\n",
+    "\n",
+    "    LangChain enables agents to use tools for contextual augmentation via internet, database, and API queries. This chapter covers:\n",
+    "\n",
+    "    * Defining custom tools in LangChain.\n",
+    "    * Building a Streamlit app for research question answering using external tools (search engines, Wikipedia).\n",
+    "    * Agent decision-making strategies (plan-and-solve, zero-shot).\n",
+    "    * Specifying output formats for information extraction (CV parser example).\n",
+    "    * Addressing hallucinations with automatic fact-checking.\n",
+    "\n",
+    "    Future chapters expand on these topics, including agent reasoning (Chapters 6 & 7) and prompting techniques (Chapter 8).\n",
+    "\n",
+    "##   Review Questions and Answers\n",
+    "\n",
+    "    **1. Give some examples of tools that are available in LangChain.**\n",
+    "\n",
+    "        * Search engines\n",
+    "        * Wikipedia\n",
+    "        * Databases\n",
+    "        * APIs\n",
+    "\n",
+    "    **2. What is Streamlit and why do we want to use it?**\n",
+    "\n",
+    "        * Streamlit is a Python library for building interactive web applications.\n",
+    "        * It's used to create user interfaces for LLM applications, making them accessible and easier to interact with.\n",
+    "\n",
+    "    **3. Please explain two agent paradigms.**\n",
+    "\n",
+    "        * **Plan-and-Solve:** The agent first develops a plan to achieve a goal and then executes the plan.\n",
+    "        * **Zero-Shot:** The agent attempts to achieve the goal directly without explicit planning.\n",
+    "\n",
+    "    **4. How can you specify an output for a model?**\n",
+    "\n",
+    "        * You can specify output formats using various techniques, often involving prompt engineering to guide the LLM's response.\n",
+    "        * Output parsing helps structure the LLM's response.\n",
+    "\n",
+    "    **5. What are the different options for output parsing?**\n",
+    "\n",
+    "        * LangChain provides various output parsers for different formats:\n",
+    "            * JSON\n",
+    "            * XML\n",
+    "            * CSV\n",
+    "            * Pydantic models\n",
+    "            * YAML\n",
+    "            * Pandas DataFrames\n",
+    "            * Enums\n",
+    "            * Datetime\n",
+    "            * Structured outputs\n",
+    "\n",
+    "    **6. How does automated fact-checking work?**\n",
+    "\n",
+    "        * Automated fact-checking verifies LLM claims against external sources.\n",
+    "        * It involves:\n",
+    "            * **Claim detection:** Identifying statements to check.\n",
+    "            * **Evidence retrieval:** Finding information to support or refute the claim.\n",
+    "            * **Verdict prediction:** Assessing the claim's accuracy based on the evidence."
+   ]
   }
  ],
  "metadata": {
